<resources>
    <string name="app_name">D&amp;D Character Sheet 3.5</string>
    <string name="search">Search</string>
    <string name="spell_name">Spell name</string>
    <string name="choose_class">Choose a class</string>
    <string name="choose_circle">Choose a circle</string>
    <string name="settings">Settings</string>
    <string name="change_char">Change Character</string>
    <string name="new_character">New Character</string>

    <string name="name">Name</string>
    <string name="race">Race</string>
    <string name="alignment">Alignment</string>
    <string name="deity">Deity</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="size">Size</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="skin">Skin</string>
    <string name="eyes">Eyes</string>
    <string name="hair">Hair</string>
    <string name="s_class">Class</string>
    <string name="level">Level</string>
    <string name="experience">Experience</string>
    <string name="edit_character">Edit Character</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="select_race">Select Race</string>
    <string name="edit_race">Edit Race</string>
    <string name="edit_class">Edit Class</string>
    <string name="add_level">Add Level</string>
    <string name="remove_level">Remove Level</string>
    <string name="remove_class">Remove Class</string>
    <string name="add_class">Add Class</string>
    <string name="cannot_decrease_level">Can\'t decrease level</string>
    <string name="select_character">Select a Character</string>
    <string name="change_race">Change Race</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="character_portrait">Character Portrait</string>
    <string name="change_portrait">Change Portrait</string>
    <string name="select_portrait">Select a Portrait</string>

    <string-array name="item_type">
        <item>Simple Weapons</item>
        <item>Martial Weapons</item>
        <item>Exotic Weapons</item>
        <item>Ammunition</item>
    </string-array>

    <string-array name="weapon_type">
        <item>Unarmed Attacks</item>
        <item>Light Melee Weapons</item>
        <item>One-Handed Melee Weapons</item>
        <item>Two-Handed Melee Weapons</item>
        <item>Ranged Weapons</item>
    </string-array>

    <string-array name="classes">
        <item>All classes</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Sorcerer/Wizard</item>
    </string-array>

    <string-array name="circles">
        <item>All circles</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
</resources>
