<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.americo.ddcharactersheet35.activity.EditCharacterActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/in_toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                style="@style/label"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/et_character_name"
                style="@style/editField"
                android:inputType="textPersonName"/>

            <TextView
                style="@style/label"
                android:text="@string/race"/>

            <LinearLayout
                style="@style/linearHorizontal">

                <TextView
                    android:id="@+id/tv_character_race"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/smallPadding"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/largeTextSize"/>

                <TextView
                    android:id="@+id/tv_race"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/change"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/largeTextSize"/>

            </LinearLayout>

            <LinearLayout
                style="@style/linearHorizontal">

                <TextView
                    android:id="@+id/tv_add_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/add_class"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/largeTextSize"/>

            </LinearLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lv_classes"
                android:paddingBottom="@dimen/padding"/>

            <LinearLayout
                style="@style/linearHorizontal">

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/tv_character_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/largeTextSize"
                        android:padding="@dimen/smallPadding"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/experience" />

                    <EditText
                        android:id="@+id/et_character_experience"
                        style="@style/editField"
                        android:inputType="number" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/linearHorizontal">

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/alignment"/>

                    <EditText
                        android:id="@+id/et_character_alignment"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/deity"/>

                    <EditText
                        android:id="@+id/et_character_deity"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/linearHorizontal">

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/gender"/>

                    <EditText
                        android:id="@+id/et_character_gender"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/age"/>

                    <EditText
                        android:id="@+id/et_character_age"
                        style="@style/editField"
                        android:inputType="number"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/linearHorizontal">

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/size"/>

                    <EditText
                        android:id="@+id/et_character_size"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/height"/>

                    <EditText
                        android:id="@+id/et_character_height"
                        style="@style/editField"
                        android:inputType="numberDecimal"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/linearHorizontal">

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/weight"/>

                    <EditText
                        android:id="@+id/et_character_weight"
                        style="@style/editField"
                        android:inputType="number"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/skin"/>

                    <EditText
                        android:id="@+id/et_character_skin"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/linearHorizontal">

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/eyes"/>

                    <EditText
                        android:id="@+id/et_character_eyes"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

                <LinearLayout
                    style="@style/linearVerticalTwoColumns">

                    <TextView
                        style="@style/label"
                        android:text="@string/hair"/>

                    <EditText
                        android:id="@+id/et_character_hair"
                        style="@style/editField"
                        android:inputType="textPersonName"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>